# plant

./: .gitignore  ChatGptAudit.md  README.md  package.json  playwright.config.ts
.github/workflows/: ci.yml  deploy.yml
engine/: Cargo.toml  build.rs
engine/assets/svg/: README.md
engine/src/: lib.rs
engine/src/render/: config.rs  meshes.rs  mod.rs  scene.rs  scene.wgsl
engine/src/sim/: climate.rs  config.rs  humidity.rs  mod.rs  moon.rs  pests.rs  plant.rs  playthrough_tests.rs  room.rs  season.rs  soil.rs  sun.rs
src/app/: page.module.css  page.tsx
src/components/: EngineCanvas.module.css  EngineCanvas.tsx
src/lib/: basePath.test.ts  formatStats.test.ts  formatStats.ts  healthTiers.ts
tests/: smoke.spec.ts
web/: next.config.ts  package-lock.json  vitest.config.ts  zoom_shot2.mjs
web/src/app/: layout.tsx
web/src/components/: EngineCanvas.module.css  EngineCanvas.tsx
web/src/lib/: basePath.ts  challenges.test.ts  challenges.ts  formatStats.test.ts  formatStats.ts  healthTiers.test.ts  scoring.test.ts  scoring.ts
web/tests/: smoke.spec.ts
